--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,13 @@
-.App {
+body {
+  background-color: #90B8F8;
+}
+
+
+.card {
+  background: #26282B;
+  border: none;
+  box-shadow: 12px 12px 2px 1px rgb(193 193 241 / 20%);
+  color:#ffffff;
+  margin: 60px 60px 0px 60px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
