--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,11 @@ body {
   border: none;
   box-shadow: 12px 12px 2px 1px rgb(193 193 241 / 20%);
   color:#ffffff;
-  margin: 60px 60px 0px 60px;
   text-align: center;
+}
+
+.cardHeader {
+  margin: 60px 60px 0px 60px;
 }
 
 .units {
