--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,9 @@ body {
   background-color: #90B8F8;
 }
 
-
 .card {
   background: #26282B;
   border: none;
-  box-shadow: 12px 12px 2px 1px rgb(193 193 241 / 20%);
   color:#ffffff;
   display: block;
   margin: 0 auto;
@@ -15,6 +13,10 @@ body {
 
 .cardHeader {
   margin: 60px 60px 0px 60px;
+}
+
+.form {
+  padding: 30px 0px 0px 10px;
 }
 
 .units {
