--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 body {
-  background-color: #90B8F8;
+  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 50px 400px;
 }
 
 .card {
   background: #26282B;
   border: none;
-  color:#ffffff;
   display: block;
   margin: 0 auto;
   max-width: 600px;
@@ -39,12 +41,12 @@ body {
 }
 
 .Weather h1 {
-  color: #5F85DB;
+  color: #ffffff;
   font-size: 25px;
 }
 
 .Weather h3 {
-  color: #5F85DB;
+  color: #ffffff;
   font-size: 15px;
 }
 
