--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,14 @@ body {
   max-width: 750px;
 }
 
+.card-body {
+  background-color: #353941;
+  border: #353941;
+  border-radius: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
 .cardHeader {
   margin: 60px 60px 0px 60px;
 }
@@ -60,6 +68,12 @@ body {
   text-align: center;
 }
 
-.weekday, .fa-cloud-sun, .temperature {
+.fa-cloud-sun, .temperature {
   color: #ffffff;
+}
+
+.weekday {
+  color:#e0c3fc;
+  font-weight: bold;
+  font-size: 30px;
 }
